Changes from Version 0.2.3-23 to 0.2.4-24 [29-Sep-2014]

* Added default contrast maximization of base images (and argument for generateStimuli2IFC to switch it off)

Changes from Version 0.2.3-22 to 0.2.3-23 [29-Aug-2014]

* Added visual feedback for batchGenerateCI2IFC function.

Changes from Version 0.2.2-20 to 0.2.3-22 [29-Aug-2014]

* Added batchGenerateCI2IFC function to batch generate classification images for multiple subjects or conditions.