@@ -1,8 +1,8 @@
 Package: rcicr
 Type: Package
 Title: Reverse correlation image classification toolbox
-Version: 0.2.4
-Date: 2014-07-26
+Version: 0.2.5
+Date: 2014-10-20
 URL: http://ron.dotsch.org/rcicr
 Author: Ron Dotsch <rdotsch@gmail.com>
 Maintainer: Ron Dotsch <rdotsch@gmail.com>
@@ -11,8 +11,8 @@ License: GPL-2
 Imports: matlab, aspace, tcltk, jpeg
 Repository: CRAN
 Repository/R-Forge/Project: rcicr
-Repository/R-Forge/Revision: 24
-Repository/R-Forge/DateTimeStamp: 2014-09-29 11:36:03
-Date/Publication: 2014-09-30 14:41:52
-Packaged: 2014-09-29 12:15:08 UTC; rforge
+Repository/R-Forge/Revision: 25
+Repository/R-Forge/DateTimeStamp: 2014-10-20 16:05:46
+Date/Publication: 2014-11-17 11:16:31
+Packaged: 2014-10-20 16:50:45 UTC; rforge
 NeedsCompilation: no
