@@ -1,17 +1,17 @@
-585cea6664c10bf1b856225d3f9b1b3c *ChangeLog
-7f51d992768eec4b9c1205c5d9aeebe9 *DESCRIPTION
+52b1e8f53cc50fff67c6c5b4fd20693c *ChangeLog
+38988e84b6989887cd39a761098ca380 *DESCRIPTION
 007a34bc6ee8a905227c72d26c3aed0e *NAMESPACE
 ded8f3476807740b57a1ffdef173d760 *R/rcicr.R
-98217228abccec669440ad5ceb60a9b3 *R/rcicr_2IFC.R
+22e3b547d69a8fdb08ffa6a45161a105 *R/rcicr_2IFC.R
 de9044933c3103527b0f1aa869ec9c28 *R/rcicr_simulations.R
 08e66b1164b2602fb56cdd38f146374e *inst/CITATION
 e464f07f1e060f83b96a73ff5a725b3f *man/autoscale.Rd
-f8694ed702f0caf16f88854993156f40 *man/batchGenerateCI2IFC.Rd
+03161c025eb79ec4483cc5d6523b4be0 *man/batchGenerateCI2IFC.Rd
 2ed675eb14a021d42259b48b05ab2996 *man/generateCI.Rd
 b6db039a12d96f955caae286b62d6837 *man/generateCI2IFC.Rd
 f5d78e9a66c636347f1899e2ff32f6db *man/generateNoiseImage.Rd
 388fbb40baf56181d3157f9aa49f57ee *man/generateNoisePattern.Rd
 87e59146681f1699aae1815071ded8d9 *man/generateSinusoid.Rd
 5601b017fed01ee93c6c71011042dad8 *man/generateStimuli2IFC.Rd
-082996e632471a85e80bca346ab64a61 *man/rcicr-package.Rd
+4d521bd42de701309227086865fc4787 *man/rcicr-package.Rd
 a2b82daa81e5d85152d814d43b0110aa *man/simulateNoiseIntensities.Rd
